--- a/scct/src/main/resources/html-reporting/index.html
+++ b/scct/src/main/resources/html-reporting/index.html
@@ -5,6 +5,7 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="jquery-1.4.2.min.js" type="text/javascript"></script>
+    <script src="jquery-ui-1.8.4.custom.min.js" type="text/javascript"></script>
     <script src="main.js" type="text/javascript"></script>
   </head>
   <body>
